@@ -137,7 +137,7 @@ everything following is part of the password.
 .I Arc
 Version 2 differs from version 1 in that archive entries
 are automatically compressed when they are added to the archive,
-making a separate compression step unecessary.  The nature of the
+making a separate compression step unnecessary.  The nature of the
 compression is indicated by the header version number placed in
 each archive entry, as follows:
 .nf
