@@ -1,3 +1,10 @@
+Unreleased changes:
+
+Klaus Reimer <k@ailis.de>, 01 Jan 2011:
+  * Corrected spelling error in arc man page.
+  * Version in binaries now comes from VERSION variable in Makefile.
+
+
                         CHANGES IN VERSION 5.21p
                  (Klaus Reimer <k@ailis.de>, 07 Aug 2010)
 
